# Repositorio-API-ebacbackend

./: .env  .gitignore  Dockerfile  celery-worker.yaml  celery_app.py  deployment.yaml  docker-compose.yml  kafka.yaml  kafka_producer.py  livros.db  logging.yaml  projeto.py  projeto_API_Backend.py  pyproject.toml  script.ps1  service.yaml  tasks.py  test_dummpy.py  variaveis_ambientes.env
.github/workflows/: python-app.yml  python-app2.yml
logstash/: logstash.conf
tests/: exemplo.db  test.db  test_auth.py  test_database.py  test_fatorial_e_soma.py  test_kafka.py  test_listar_e_armazenar_livros_na_api.py  test_tasks.py  test_tasks_endpoint.py
