[project]
name = "cursoebac"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "redis (>=7.2.1,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.2)",
    "python-jose (>=3.5.0,<4.0.0)",
    "requests (>=2.33.0,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "aiokafka (>=0.13.0,<0.14.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "confluent-kafka (>=2.14.0,<3.0.0)",
    "stripe (>=15.2.0,<16.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "clamd (>=1.0.2,<2.0.0)",
    "google-auth (>=2.54.0,<3.0.0)",
]
[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-mock (>=3.15.1,<4.0.0)"
]
